--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Sheets Data Display</title>
+    <title>Spostamenti I7B</title>
+    <style>
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+  }
+  .change-clan {
+    background-color: lightgrey;
+  }
+</style>
+
 </head>
 <body>
     <div id="content"></div>
