--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spostamenti I7B</title>
+    <title>List Giocatori I7B</title>
     <style>
+        .tableWrapper {
+            max-height: 600px; /* Adjust to suit your needs */
+            overflow-y: auto;
+        }
         table {
             border-collapse: collapse;
             width: 100%;
-            table-layout: fixed;
+            table-layout: auto;
         }
         th, td {
             border: 1px solid black;
@@ -16,14 +20,9 @@
             text-align: left;
         }
         th {
-            background-color: white;
             position: sticky;
             top: 0;
-            z-index: 2;
-        }
-        .content-container {
-            height: 80vh; /* change the height as per your requirement */
-            overflow: auto;
+            background-color: #fff;
         }
         .generale {
             background-color: lightcoral;
@@ -37,7 +36,7 @@
     </style>
 </head>
 <body>
-    <div class="content-container" id="content"></div>
+    <div class="tableWrapper" id="content"></div>
     <script src="script.js"></script>
 </body>
 </html>
