--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spostamenti I7B</title>
+    <title>List Giocatori I7B</title>
     <style>
         table {
             border-collapse: collapse;
             width: 100%;
-            display: block;
-            overflow: auto;
         }
         th, td {
             border: 1px solid black;
@@ -24,12 +22,6 @@
         }
         .tenente {
             background-color: lightgreen;
-        }
-        th {
-            position: -webkit-sticky;
-            position: sticky;
-            top: 0;
-            background: white;
         }
     </style>
 </head>
