--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List Giocatori I7B</title>
+    <title>Spostamenti I7B</title>
     <style>
         table {
             border-collapse: collapse;
@@ -26,17 +26,7 @@
     </style>
 </head>
 <body>
-    <table id="content">
-        <tr>
-            <th>Clan Name</th>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Trophies</th>
-            <th>Grado</th>
-            <th>Nome Telegram</th>
-            <th>Username Telegram</th>
-        </tr>
-    </table>
+    <div id="content"></div>
     <script src="script.js"></script>
 </body>
 </html>
