--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spostamenti I7B</title>
+    <title>Lista giocatori I7B</title>
     <style>
         table {
             border-collapse: collapse;
@@ -26,6 +26,8 @@
     </style>
 </head>
 <body>
+    <h2>Filtra per Clan:</h2>
+    <select id="clan-filter"></select>
     <div id="content"></div>
     <script src="script.js"></script>
 </body>
