--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -44,6 +44,7 @@
                     <th>Grado</th>
                     <th>Nome Telegram</th>
                     <th>Username Telegram</th>
+                    <th>Nome Discord</th> <!-- New column header -->
                 </tr>
             </thead>
             <tbody></tbody>
