--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spostamenti I7B</title>
+    <title>Lista Giocatori I7B</title>
     <style>
         table {
             border-collapse: collapse;
