--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <!-- New Summary Table -->
-    <h2>Summary</h2>
+    <h2>Riassunto</h2>
     <table id="summary-content">
         <thead>
             <tr>
