--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -26,6 +26,9 @@
         #dropdown-container {
             margin-bottom: 20px; /* Adjust this value as needed */
         }
+        .total-row {
+            font-weight: bold; /* New CSS class for the total row */
+        }
     </style>
 </head>
 <body>
