--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -36,7 +36,10 @@
         <label for="clan-filter">Filtra per Clan</label>
         <select id="clan-filter"></select>
     </div>
-
+    <div id="checkbox-container">
+        <label for="multi-account-checkbox">Mostra account multipli</label>
+        <input type="checkbox" id="multi-account-checkbox">
+    </div>
     <!-- New Summary Table -->
     <h2>Riassunto</h2>
     <table id="summary-content">
