--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -24,10 +24,10 @@
             background-color: lightgreen;
         }
         #dropdown-container {
-            margin-bottom: 20px; /* Adjust this value as needed */
+            margin-bottom: 20px;
         }
         .total-row {
-            font-weight: bold; /* New CSS class for the total row */
+            font-weight: bold;
         }
     </style>
 </head>
@@ -40,7 +40,7 @@
         <label for="multi-account-checkbox">Mostra account multipli</label>
         <input type="checkbox" id="multi-account-checkbox">
     </div>
-    <!-- New Summary Table -->
+
     <h2>Riassunto</h2>
     <table id="summary-content">
         <thead>
@@ -49,10 +49,11 @@
                 <th>Giocatori</th>
                 <th>Telegram</th>
                 <th>Discord</th>
+                <th>Punteggio</th>
             </tr>
         </thead>
         <tbody>
-            <!-- Summary data will be inserted here by JavaScript -->
+            <!-- I dati del riassunto saranno inseriti qui dal JavaScript -->
         </tbody>
     </table>
 
@@ -68,7 +69,7 @@
                     <th>Grado</th>
                     <th>Nome Telegram</th>
                     <th>Username Telegram</th>
-                    <th>Nome Discord</th> <!-- New column header -->
+                    <th>Nome Discord</th>
                 </tr>
             </thead>
             <tbody></tbody>
