--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -50,6 +50,7 @@
                 <th>Telegram</th>
                 <th>Discord</th>
                 <th>Punteggio</th>
+                <th>Punteggio dopo spostamenti</th>
             </tr>
         </thead>
         <tbody>
