--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -32,6 +32,9 @@
     </style>
 </head>
 <body>
+    <div id="title-container">
+    <h1 id="page-title">Giorno: </h1> <!-- Il titolo verrà aggiornato dallo script -->
+    </div>
     <div id="dropdown-container">
         <label for="clan-filter">Filtra per Clan</label>
         <select id="clan-filter"></select>
