--- a/listagiocatori/index.html
+++ b/listagiocatori/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div id="title-container">
-    <h1 id="page-title">Giorno: </h1> <!-- Il titolo verrà aggiornato dallo script -->
+    <h1 id="page-title">Giorno&nbsp;</h1> <!-- Il titolo verrà aggiornato dallo script -->
     </div>
     <div id="dropdown-container">
         <label for="clan-filter">Filtra per Clan</label>
